[package]

name = "piston-example-user_input"
version = "0.0.0"
authors = ["Your Name <your@email.com>"]
tags = []

[[bin]]

name = "piston-example-user_input"
path = "src/main.rs"

[dependencies.piston]

git = "https://github.com/pistondevelopers/piston"

[dependencies.pistoncore-sdl2_window]

git = "https://github.com/pistondevelopers/sdl2_window"

[dependencies.piston2d-graphics]

git = "https://github.com/pistondevelopers/graphics"

